# HairDrop

./: Cargo.toml  README.md
.github/workflows/: deploy.yaml  docs.yaml
HairDrop-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
HairDrop-frontend/src/: App.jsx
HairDrop-frontend/src/components/: LoginForm.jsx
HairDrop-frontend/src/pages/: Login.jsx
Hairdrop-backend/src/: main.rs
backend/: .env  Cargo.toml  Dockerfile  diesel.toml
backend/migrations/2024-11-17-101802_hairdrop/: down.sql  up.sql
backend/scripts/: build.sh  rust-backend.service  update-server.sh
backend/src/: config.rs  handlers.rs  jwt.rs  main.rs  models.rs  schema.rs
backend/src/services/: mod.rs  post_login.rs  post_register.rs  post_search.rs  post_searchsafe.rs
backend/src/utils/: config.rs  mod.rs  passwordpolicy.rs
docs/: README.md
docs/01.requirements-engineering/: glossary.md  supplementary-specification.md  use-case-diagram.md
docs/01.requirements-engineering/puml/: use-case-diagram.puml
docs/02.analysis/: README.md
docs/02.analysis/puml/: domain-model.puml
docs/03.design/: README.md
docs/03.design/vpp/: physical-model.vpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: apiService.js  auth.js
frontend/src/components/: LoginForm.jsx  LogoutButton.jsx  RegistrationForm.jsx  SearchInput.jsx  TableDB.jsx  index.js
frontend/src/pages/: Home.jsx  PageNotFound.jsx  Register.jsx  index.js
frontend/src/routes/: PrivateRoute.jsx  PublicRoute.jsx  index.js
frontend/src/utils/: PasswordPolicy.js
src/docs/01.requirements-engineering/: supplementary-specification.md  use-case-diagram.md
(+1 files in other folders)
