[package]
name = "rust-web-server-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = [
    "serde",
] } # Adds chrono with serde support
actix-web = "4"
diesel = { version = "2.0", features = ["mysql", "r2d2"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.12" # For password hashing
uuid = { version = "1.1", features = ["v4"] } # For unique user IDs
