[package]
name = "rust-web-server-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "8.1"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
diesel = { version = "2.2.4", features = ["mysql", "r2d2", "chrono"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.12"                                                        # For password hashing
uuid = { version = "1.1", features = ["v4"] }                          # For unique user IDs
